# nixd

./: .gitignore  Cargo.toml  README.md  config.nix  default.nix  nixpkgs.nix  shell.nix
src/: executor.rs  main.rs  nixpkgs.nix  opts.rs  trivial-shell.nix  types.rs
src/commands/: direnv.rs  lorri.rs  mod.rs  niv.rs
